--- a/index.html
+++ b/index.html
@@ -195,6 +195,24 @@
             color: #fff;
             margin-top: 20px; 
         }
+
+        /* Media Queries for Responsive Design */
+        @media (max-width: 768px) {
+            nav ul {
+                text-align: center;
+                padding: 0;
+            }
+            
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+            
+            .intro, section {
+                padding: 20px;
+                margin: 10px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -258,7 +276,7 @@
     <section id="social">
         <div class="social-buttons">
             <a href="https://github.com/sachin9336" class="github" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/sachin9336/" class="linkedin" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/sachin-dubey-940b59252/" class="linkedin" target="_blank">LinkedIn</a>
         </div>
     </section>
 
