--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="intro">
             <h1>Welcome to My Portfolio</h1>
             <p>I am a Web Developer</p>
-            <a href="resume2.pdf" class="btn" download>Download Resume</a>
+            <a href="Resume 2.pdf" class="btn" download>Download Resume</a>
         </div>
     </section>
 
